example/secondfile/objects/DHStatus_Completion_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details-Access Test Status Details-Message Details-DHStatus- Completion Details</description>
    <fields>
        <fullName>ATT_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-ATT Circuit ID</description>
        <label>ATT Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_Reference_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-ATT Reference Number</description>
        <label>ATT Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Requested_Indicator__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Comment Requested Indicator</description>
        <label>Comment Requested Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Message_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access test Status Details-Message Details- DHStatus_Completion Details</description>
        <label>DHStatus-Message Details</label>
        <referenceTo>DHStatus_Message_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Completion Details</relationshipLabel>
        <relationshipName>DHStatus_Completion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <formula>CASESAFEID( DHStatus_Message_Details__r.DHStatus_Access_Test_Status_Details__r.DHStatus_ASR_Details__r.DHStatus_Update_IDH__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHStatus Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Extended_Reason__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Not Extended Reason</description>
        <label>Not Extended Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Provider Circuit ID</description>
        <label>Provider Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>DHStatus_Message_Details__r.DHStatus_Access_Test_Status_Details__r.Record_Type__c</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Accepted_By_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Test Accepted By Name</description>
        <label>Test Accepted By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Completion Details</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>DHStatus-Completion Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Completion Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>